--- a/hastron.cabal
+++ b/hastron.cabal
@@ -25,3 +25,15 @@ executable hastron
                        hashable >=1.2 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite test
+  type:               exitcode-stdio-1.0
+  default-language:   Haskell2010
+  hs-source-dirs:     tests
+  main-is:            TestMain.hs
+  build-depends:      
+    base >=4.7 && <4.9,
+    tasty >=0.10 && <0.11,
+    tasty-hunit >=0.9 && <0.10,
+    tasty-quickcheck >=0.8 && <0.9
+
