--- a/hastron.cabal
+++ b/hastron.cabal
@@ -3,13 +3,10 @@
 
 name:                hastron
 version:             0.1.0.0
--- synopsis:
--- description:
 license:             MIT
 license-file:        LICENSE
 author:              Abhinav Sarkar
 maintainer:          abhinav@abhinavsarkar.net
--- copyright:
 category:            Game
 build-type:          Simple
 extra-source-files:  README.md
@@ -17,23 +14,27 @@ cabal-version:       >=1.10
 
 executable hastron
   main-is:             Main.hs
+  ghc-options:         -Wall
   other-modules:       Hastron.Server.Types
-  -- other-extensions:
-  build-depends:       base >=4.7 && <4.9,
-                       text >=1.2 && <1.3,
-                       unordered-containers >=0.2.5 && <0.3,
-                       hashable >=1.2 && <1.3
+                       Hastron.Utils
+  build-depends:       
+    base >=4.7 && <4.9,
+    text >=1.2 && <1.3,
+    unordered-containers >=0.2.5 && <0.3,
+    hashable >=1.2 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 test-suite test
   type:               exitcode-stdio-1.0
+  ghc-options:        -Wall
   default-language:   Haskell2010
-  hs-source-dirs:     tests
+  hs-source-dirs:     src, tests
   main-is:            TestMain.hs
   build-depends:      
     base >=4.7 && <4.9,
     tasty >=0.10 && <0.11,
     tasty-hunit >=0.9 && <0.10,
-    tasty-quickcheck >=0.8 && <0.9
+    tasty-quickcheck >=0.8 && <0.9,
+    QuickCheck >=2.8 && <2.9
 
