--- a/hastron.cabal
+++ b/hastron.cabal
@@ -22,6 +22,9 @@ executable hastron
   build-depends:       base >=4.7 && <4.9,
                        text >=1.2 && <1.3,
                        unordered-containers >=0.2.5 && <0.3,
+                       dlist >= 0.7 && <0.8,
+                       mtl >= 2.2 && <2.3,
                        hashable >=1.2 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall
