--- a/hastron.cabal
+++ b/hastron.cabal
@@ -24,6 +24,7 @@ executable hastron
                        unordered-containers >=0.2.5 && <0.3,
                        dlist >= 0.7 && <0.8,
                        mtl >= 2.2 && <2.3,
+                       bifunctors >=5 && <6,
                        hashable >=1.2 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
